--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
   <!-- Música romântica de fundo (opcional) -->
   <audio autoplay loop>
-    <source src="musica.mp3" type="audio/mpeg">
+    <source src="musica.mpeg" type="audio/mpeg">
     Seu navegador não suporta áudio.
   </audio>
 
