--- a/index.html
+++ b/index.html
@@ -180,12 +180,17 @@ meu lugar no mundo é onde Alam está. 🌹
   </footer>
 
   <!-- Música -->
-  <audio id="musica" src="musica.mp3" type="audio/mpeg"></audio>
+<audio id="musica" src="música.mp3" type="audio/mp3"></audio>
 
-  <script>
-    function tocarMusica() {
-      const musica = document.getElementById("musica");
-      musica.play();
+<!-- Botão para tocar música -->
+<button onclick="tocarMusica()">🎵 Tocar Música</button>
+
+<script>
+  function tocarMusica() {
+    const musica = document.getElementById("musica");
+    musica.play();
+  }
+</script>
     }
 
     // Contador
