--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@ meu lugar no mundo é onde Alam está. 🌹
   </footer>
 
   <!-- Música -->
-<audio id="musica" src="musica.mp3" type="audio/mp3"></audio>
+<audio id="musica" src="som.mp3" type="audio/mp3"></audio>
 
 <script>
   // Tocar música
